stylefix: table background for dark mode fixed

--- a/frontend/src/TooljetDatabase/Table/styles.scss
+++ b/frontend/src/TooljetDatabase/Table/styles.scss
@@ -41,7 +41,6 @@
 }
 
 .tj-table {
-
   thead th {
     position: sticky;
     top: 0px;
@@ -50,12 +49,14 @@
   td:nth-child(1) {
     position: sticky;
     left: 0;
+    background-color: white;
   }
 
   td:nth-child(2) {
     position: sticky;
     left: 66px;
     border-right: 2px solid var(--light-slate-08, #C1C8CD);
+    background-color: white;
   }
 
   th {
@@ -69,7 +70,6 @@
     border-right: 1px solid;
     border-bottom: 1px solid;
     border-color: inherit;
-    background-color: #ffffff;
   }
 
   th:nth-child(1) {
@@ -82,6 +82,13 @@
     z-index: 1;
     left: 66px;
     border-right: 2px solid var(--light-slate-08, #C1C8CD);
+  }
+
+  .dark-background {
+    td:nth-child(1),
+    td:nth-child(2) {
+      background-color: #2B394A;
+    }
   }
 
 }
